--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -26,7 +26,7 @@
                     </div>
                 </form>
                 <div class="text-center mt-3">
-                    <p>Don&apos;t have an account? <a href="{{ url_for('auth.register') }}">Register here</a></p>
+                    <p>Don't have an account? <a href="{{ url_for('auth.register') }}">Register here</a></p>
                 </div>
             </div>
         </div>
